--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,11 @@ phases:
   build:
     commands:
       - echo "Zipping deployment package..."
-      - cd lib
-      - zip -r9 ../deployment_package.zip .
-      - cd ..
-      - zip -g deployment_package.zip lambda_function.py
+
+      - zip -g deployment_package.zip Rekognition.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
       - aws lambda update-function-code --function-name Rekognition --zip-file fileb://deployment_package.zip
       - echo "DONE!!"
+
